# AutoCarver

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.md-move-to-AutoCarver__discretizers__utils__README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml  python-publish.yml  readthedocs-build.yml  release.yml
AutoCarver/: AutoCarver.py  BaseDiscretizers.py  Converters.py  Discretizers.py  Discretizers.py-move-to-QuantitativeDiscretizers.py  FeatureSelector.py  QualitativeDiscretizers.py  QuantitativeDiscretizers.py  __init__.py  auto_carver.py  auto_carver.py-move-to-multiclass_carver.py  config.py  converters.py  feature_selection__filters____init__.py-move-to-selectors__filters____init__.py  feature_selection__measures____init__.py-move-to-selectors__measures____init__.py  feature_selector.py
AutoCarver.egg-info/: requires.txt
AutoCarver/Discretizers/: BaseDiscretizers.py  QuantitativeDiscretizers.py
AutoCarver/carvers/: __init__.py  base_carver.py  binary_carver.py  continuous_carver.py  multiclass_carver.py  ordinal_carver.py
AutoCarver/carvers/utils/: __init__.py  associations.py  base_carver.py  combinations.py  multiprocessing.py  pretty_print.py  testing.py
AutoCarver/combinations/: __init__.py  associations.py-move-to-utils__combination_evaluator.py
AutoCarver/combinations/binary/: __init__.py  binary_combination_evaluators.py  binary_target_rates.py
AutoCarver/combinations/continuous/: __init__.py  continuous_combination_evaluators.py  continuous_target_rates.py
AutoCarver/combinations/ordinal/: __init__.py  ordinal_combination_evaluators.py  ordinal_target_rates.py
AutoCarver/combinations/utils/: __init__.py  combination_evaluator.py  combinations.py  target_rate.py  testing.py
AutoCarver/discretizers/: README.md  __init__.py  discretizer.py  discretizers.py  qualitative_discretizers.py  quantitative_discretizers.py
AutoCarver/discretizers/dtypes/: __init__.py  string_discretizer.py  timedelta_discretizer.py
AutoCarver/discretizers/qualitatives/: __init__.py  categorical_discretizer.py  chained_discretizer.py  nested_discretizer.py  ordinal_discretizer.py  qualitative_discretizer.py
AutoCarver/feature_selection/: __init__.py  base_selector.py  binary_selector.py  continuous_selector.py  feature_selector.py  feature_selector.py-move-to-filters__qualitative_filters.py  feature_selector.py-move-to-multiclass_selector.py  qualitative_selector.py  quantitative_selector.py
AutoCarver/features/: __init__.py  base_feature.py  categorical_feature.py  continuous_feature.py  date_feature.py  features.py  llm_qualifier.py  ordinal_feature.py  qualitative_feature.py  qualitative_features.py  quantitative_feature.py  quantitative_features.py
AutoCarver/mcp/: __init__.py  __main__.py  inspection.py  server.py  session.py
AutoCarver/selectors/: __init__.py  base_selector.py  classification_selector.py  ordinal_selector.py  regression_selector.py
AutoCarver/utils/: __init__.py  attributes.py  base_carver.py  binary_carver.py  continuous_carver.py  dependencies.py  extend_docstring.py  multiclass_carver.py
auto_carver/: __init__.py
auto_carver/carvers/: __init__.py  base_carver.py  binary_carver.py  continuous_carver.py  multiclass_carver.py
auto_carver/discretizers/: __init__.py  discretizers.py
auto_carver/selectors/: __init__.py  base_selector.py
autocarver/selectors/: __init__.py  base_selector.py  classification_selector.py  regression_selector.py
crates/autocarver_kernels/: Cargo.toml
crates/autocarver_kernels/src/: assign.rs  chi2.rs  kruskal.rs  lib.rs
docs/: build_animations.py  build_logo.py  requirements.txt  sync_readme.py
docs/source/: about.rst  auto_carver.rst  carvers.rst  carvers_examples.rst  combinations.rst  comparison.rst  conf.py  credit_scoring_example.html  discretizers.rst  discretizers_examples.rst  examples.rst  feature_selector.rst  features.rst  index.rst  installation.rst  mcp.rst  quick_start.rst  selectors.rst  selectors_examples.rst  viability.rst
new_carver/selectors/: base_selector.py
source/: conf.py  quick_start.rst
tests/: conftest.py  requirements.txt  test_auto_carver.py  test_base_discretizers.py  test_base_discretizers.py-move-to-test_grouped_list.py  test_converters.py  test_discretizers.py  test_feature_selector.py  test_grouped_list.py  test_qualitative_discretizers.py  test_quantitative_discretizers.py  test_type_discretizers.py
tests/carvers/: conftest.py  test_binary_carver.py  test_continuous_carver.py  test_multilcass_carver.py  test_ordinal_carver.py  test_target_guard.py
tests/combinations/: test_rust_parity.py
tests/converters/: test_converters.py
tests/discretizers/: test_base_discretizer.py  test_categorical_discretizer.py  test_chained_discretizer.py  test_continuous_discretizer.py  test_discretizer.py  test_discretizers.py  test_discretizers.py-move-to-qualitatives__test_qualitative_discretizer.py  test_feature_selection.py  test_grouped_list.py  test_ordinal_discretizer.py  test_qualitative_discretizers.py  test_quantitative_discretizers.py  test_string_discretizer.py  test_type_discretizers.py
tests/examples/: test_comparison_notebook.py  test_comparison_snippets.py  test_quick_start.py
tests/feature_selection/: test_feature_selector.py
tests/features/: conftest.py  test_base_feature.py  test_features.py  test_from_dataframe.py  test_grouped_list.py  test_qualitative_features.py  test_quantitative_features.py
tests/mcp/: test_inspection.py  test_ordinal_task.py  test_server.py  test_session.py
tests/properties/: conftest.py  strategies.py
tests/selectors/: conftest.py  test_base_filters.py  test_base_measures.py  test_base_selector.py  test_classification_selector.py  test_get_best_features.py  test_ordinal_selector.py  test_qualitative_filters.py  test_qualitative_measures.py  test_quantitative_filters.py  test_quantitative_measures.py  test_regression_selector.py  test_vectorized_parity.py  test_vectorized_perf.py
tests/utils/: test_attribute.py
(+170 files in other folders)
