[project]
name = "AutoCarver"
version = "7.1.1"
description = "Automatic Discretization of Features with Optimal Target Association"
authors = [{ name = "Mario DEFRANCE", email = "defrancemario@gmail.com" }]
requires-python = ">=3.10, <3.13"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24.2, <2.1",
    "scipy>=1.11.4,<2",
    "scikit-learn>=1.3.2,<2",
    "statsmodels>=0.13",
    "tqdm>=4.66.1,<5",
    "pandas>=2.1.4,<3",
]

[project.optional-dependencies]
jupyter = [
    "ipython>=8.18.1,<9",
    "matplotlib>=3.8.2,<4",
    "jinja2>=3.1.5,<4",
    "ipykernel>=6.27.1,<7",
]
[dependency-groups]
dev = [
    "ipykernel>=6.27.1,<7",
    "xgboost>=2.1.3,<3",
    "ipywidgets>=8.1.5,<9",
    "pylint>=3.0.3,<4",
    "pytest-cov>=4.1.0,<5",
    "pytest>=7.4.3,<8",
    "icecream>=2.1.3,<3",
    "sphinx==7.4.7",
    "sphinx-rtd-theme==2.0.0",
    "pypandoc>=1.12,<2",
    "nbsphinx==0.9.6",
    "toml>=0.10.2,<0.11",
    "ruff>=0.15.12",
]

[project.urls]
docs = "https://autocarver.readthedocs.io/en/latest/index.html"
repository = "https://github.com/mdefrance/AutoCarver"

[tool.uv.build-backend]
module-name = ["AutoCarver"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "PTH", "UP", "C90", "FURB", "ERA"]
ignore = ["PTH123", "B905", "ERA001"]

[tool.pylint.basic]
good-names = ["X", "y"]

[tool.pylint.messages_control]
disable = ["C0301", "C0103", "E0110", "W0621", "import-error"]
