[project]
name = "AutoCarver"
version = "7.1.11"
description = "Automatic Discretization of Features with Optimal Target Association"
authors = [{ name = "Mario DEFRANCE", email = "defrancemario@gmail.com" }]
requires-python = ">=3.11, <3.15"
readme = "README.md"
license = "MIT"
keywords = [
    "binning",
    "discretization",
    "feature-engineering",
    "credit-scoring",
    "woe",
    "scorecards",
    "tschuprow",
    "tschuprow-t",
    "cramer-v",
    "information-value",
    "iv",
    "monotonic-binning",
    "supervised-discretization",
    "bucketization",
    "risk-modeling",
    "credit-risk",
    "fraud-detection",
    "categorical-encoding",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.1,<2.5",
    "scipy>=1.15,<1.18",
    "pandas>=2.3,<3.1",
    "scikit-learn>=1.6,<1.9",
    "statsmodels>=0.14.1,<1",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
jupyter = [
    "ipython>=8.28,<9.11",
    "matplotlib>=3.9,<3.11",
    "jinja2>=3.1.5,<4",
    "ipykernel>=6.27.1,<7",
]
[dependency-groups]
dev = [
    "ipykernel>=6.27.1,<7",
    "xgboost>=3.2,<4",
    "ipywidgets>=8.1.5,<9",
    "pylint>=3.0.3,<4",
    "pytest-cov>=4.1.0,<5",
    "pytest>=7.4.3,<8",
    "icecream>=2.1.3,<3",
    "sphinx==7.4.7",
    "sphinx-rtd-theme==2.0.0",
    "pypandoc>=1.12,<2",
    "nbsphinx==0.9.6",
    "toml>=0.10.2,<0.11",
    "ruff>=0.15.12",
    "pytest-xdist>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/mdefrance/AutoCarver"
Documentation = "https://autocarver.readthedocs.io/en/latest/"
Repository = "https://github.com/mdefrance/AutoCarver"
Issues = "https://github.com/mdefrance/AutoCarver/issues"

[tool.uv.build-backend]
module-name = ["AutoCarver"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = 'py311'
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "PTH", "UP", "C90", "FURB", "ERA"]
ignore = ["PTH123", "B905", "ERA001"]

[tool.pylint.basic]
good-names = ["X", "y"]

[tool.pylint.messages_control]
disable = ["C0301", "C0103", "E0110", "W0621", "import-error"]

[tool.pytest.ini_options]
addopts = "-n auto --tb=short -q"
testpaths = ["tests"]
